[gd_scene load_steps=13 format=3 uid="uid://blbx1davtesbp"]

[ext_resource type="Script" uid="uid://cqj21jevwcgg" path="res://scenes/items/proyectiles/piranna_fire_ball.gd" id="1_ovfwn"]
[ext_resource type="Texture2D" uid="uid://t2ao2o1fixda" path="res://scenes/characters/Enemies/Piranna Plant/skeleton.png" id="2_5uhpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkoyy"]
size = Vector2(10.6667, 10.6667)

[sub_resource type="Curve" id="Curve_ovfwn"]
_limits = [0.0, 10.0, -3.0, 3.0]
_data = [Vector2(-2.35714, 0), 0.0, 0.0, 0, 0, Vector2(0.857143, 4.64286), 1.45014, 1.45014, 0, 0, Vector2(2.78571, 6.42857), 0.723854, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 28

[sub_resource type="Gradient" id="Gradient_5uhpc"]
offsets = PackedFloat32Array(0.00696056, 0.731481, 1)
colors = PackedColorArray(0.934474, 0.43913, 0.0739197, 0.741176, 0.934474, 0.325583, 0.0739197, 0.741176, 0.934474, 0.139232, 0.0739197, 0.741176)

[sub_resource type="Curve" id="Curve_71txe"]
_limits = [0.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.506775, 106.554), 406.908, 406.908, 0, 0, Vector2(0.964912, 200), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_5uhpc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fire:color_ramp")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Gradient_5uhpc")]
}

[sub_resource type="Animation" id="Animation_ovfwn"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fire:color_ramp")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 1,
"values": [SubResource("Gradient_5uhpc"), SubResource("Gradient_5uhpc")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_71txe"]
_data = {
&"RESET": SubResource("Animation_5uhpc"),
&"fade_out": SubResource("Animation_ovfwn")
}

[sub_resource type="Gradient" id="Gradient_ovfwn"]
offsets = PackedFloat32Array(0, 0.989446)
colors = PackedColorArray(0.752941, 0.0980392, 1, 0.603922, 1, 0.0980392, 0.905882, 0.678431)

[sub_resource type="Curve" id="Curve_5uhpc"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_71txe"]
offsets = PackedFloat32Array(0, 0.316623, 0.693931, 0.978892)
colors = PackedColorArray(0.827451, 0.827451, 0.827451, 0.211765, 0.827451, 0.827451, 0.827451, 1, 0.827451, 0.827451, 0.827451, 1, 0.827451, 0.827451, 0.827451, 0.0117647)

[node name="Piranna_fire_ball" type="Area2D"]
z_index = -1000
script = ExtResource("1_ovfwn")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.988783, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.15256e-07, -7.15256e-07)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_fkoyy")

[node name="Fire" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.15
preprocess = 0.3
explosiveness = 0.1
randomness = 0.84
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(5, 0)
spread = 53.9
gravity = Vector2(0, -600)
angular_velocity_min = -427.25
angular_velocity_max = -7.91
damping_max = 59.281
scale_amount_min = 3.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_ovfwn")
color_ramp = SubResource("Gradient_5uhpc")
anim_speed_min = -7.55
anim_speed_max = 43.22
anim_speed_curve = SubResource("Curve_71txe")
anim_offset_max = 0.4675

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_71txe")
}

[node name="Poison" type="CPUParticles2D" parent="."]
z_index = 10
emitting = false
amount = 30
lifetime = 0.15
preprocess = 0.3
explosiveness = 0.1
randomness = 0.84
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(5, 0)
spread = 57.33
gravity = Vector2(0, -600)
angular_velocity_min = -427.25
angular_velocity_max = -7.91
damping_max = 59.281
scale_amount_min = 3.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_ovfwn")
color_ramp = SubResource("Gradient_ovfwn")
anim_speed_min = -7.55
anim_speed_max = 43.22
anim_speed_curve = SubResource("Curve_71txe")
anim_offset_max = 0.4675

[node name="skull" type="CPUParticles2D" parent="Poison"]
z_index = 11
emitting = false
amount = 2
texture = ExtResource("2_5uhpc")
lifetime = 0.6
speed_scale = 0.4
randomness = 0.07
emission_shape = 1
emission_sphere_radius = 30.0
gravity = Vector2(0, -200)
angular_velocity_min = -50.0
angular_velocity_max = 50.0
linear_accel_min = -34.74
linear_accel_max = 41.31
linear_accel_curve = SubResource("Curve_5uhpc")
radial_accel_min = 38.95
radial_accel_max = 38.95
tangential_accel_min = -11.26
tangential_accel_max = 40.38
damping_min = 28.638
damping_max = 28.638
scale_amount_min = 1.5
scale_amount_max = 2.5
color = Color(0.778335, 0.450592, 0.75972, 1)
color_ramp = SubResource("Gradient_71txe")
anim_speed_min = 6.01
anim_speed_max = 46.27

[node name="Timer2" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
